--- a/todo-drag/package.json
+++ b/todo-drag/package.json
@@ -3,16 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "cra-template": "1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "react-beautiful-dnd": "^13.1.1",
     "web-vitals": "^3.5.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
     "eslint": "^8.57.0"
+  },
+  "overrides": {
+    "postcss": "^8.4.31",
+    "nth-check": "^2.1.1",
+    "@svgr/webpack": "^8.1.0",
+    "resolve-url-loader": "^5.0.0",
+    "svgo": "^3.2.0",
+    "css-select": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
